<package>
  <name>visual_odom</name>
  <description>Visual odometry package</description>
  <maintainer email="stephmc.tdu@gmail.com">Steph McArthur</maintainer>
  <version>0.0.1</version>
  <author>Steph McArthur</author>
  <license>Whatever</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>
</package>
